Avoid wrapping on buttons

--- a/app/components/AquaButton.module.css
+++ b/app/components/AquaButton.module.css
@@ -14,6 +14,7 @@
   background: var(--button-bg), var(--button-border-bg);
   background-clip: padding-box, border-box;
   box-shadow: var(--widget-box-shadow);
+  white-space: nowrap;
   user-select: none;
   padding-inline: 14px;
 
